--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
+    "typescript-language-server": "^5.1.3",
     "vite": "^7.2.4"
   }
 }
