--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "biome check",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
@@ -17,16 +18,28 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
+    "@secretlint/secretlint-rule-preset-recommend": "^11.2.5",
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "react-toastify": "^11.0.5",
+    "secretlint": "^11.2.5",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-language-server": "^5.1.3",
     "vite": "^7.2.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": [
+      "npx biome check --write"
+    ],
+    "*": [
+      "secretlint"
+    ]
   }
 }
