--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
+    "vite-plugin-beasties": "^0.3.5",
     "vitest": "^4.0.16"
   },
   "lint-staged": {
