--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^16.2.7",
     "react-toastify": "^11.0.5",
     "secretlint": "^11.2.5",
+    "serve": "^14.2.5",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
